Fix paragraph text alignment

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h7 {
 p {
   color: #fff;
   font-size: 20px;
-  text-align: justify;
+  text-align: left;
 }
 
 ul {
